--- a/app/views/kaminari/_paginator.html.erb
+++ b/app/views/kaminari/_paginator.html.erb
@@ -8,7 +8,7 @@
 -%>
 <%= paginator.render do -%>
   <nav aria-label="Page navigation">
-    <ul class="pagination justify-content-center pt-3">
+    <ul class="pagination pagination-sm m-0 float-right">
       <li class="page-item">
         <%= first_page_tag unless current_page.first? %>
       </li>
