来店履歴変更処理

--- a/app/views/customer/visited_logs/edit.html.erb
+++ b/app/views/customer/visited_logs/edit.html.erb
@@ -17,4 +17,4 @@
   </div>
 </div>
 
-<%= render 'form', visited_log: @visited_log, url: { company_code: @company.code, customer_id: @customer.id, action: :create } %>
+<%= render 'form', visited_log: @visited_log, url: { company_code: @company.code, customer_id: @customer.id, action: :update } %>
