--- a/app/views/customers/new_line_message.html.erb
+++ b/app/views/customers/new_line_message.html.erb
@@ -84,7 +84,7 @@
           <%= form.hidden_field :user_id %>
 
           <div class="form-group">
-            <%= form.text_area :message, { class: 'form-control', placeholder: 'メッセージを入力してください。', maxlength: 240, rows: 4 } %>
+            <%= form.text_area :message, { class: 'form-control', placeholder: 'メッセージを入力してください。', maxlength: 240, rows: 4, required: true } %>
           </div>
 
           <%= form.submit class: 'btn btn-primary', value: '　送　信　', data: {disable_with: '　送信中...　'} %>
