送信上限チェックのリファクタと水平展開

--- a/app/views/public/homes/index_for_system.html.erb
+++ b/app/views/public/homes/index_for_system.html.erb
@@ -23,7 +23,7 @@
           <div class="info-box-content">
             <span class="info-box-text">LINE通知</span>
             <span class="info-box-number">
-              <%= @company.get_current_month_push_message_count %>
+              <%= @company.get_current_month_push_message_count.to_s(:delimited) %>
               <small>/<%= @company.limit_line_message_count.to_s(:delimited) %></small>
             </span>
           </div>
